@@ -1,3 +1,6 @@
+28 October 2013
++ Add ioctl_period test
+
 11 October 2013
 + Add tests/error_returns/e2big
 + Move non-existent test to tests/error_returns
